--- a/src/components/Newsitem/Newsitem.css
+++ b/src/components/Newsitem/Newsitem.css
@@ -2,6 +2,12 @@
   background: #2a2a2a;
   padding: 20px 15px;
   border-radius: 5px;
+  transition: 0.2s ease;
+}
+
+.newsitem:hover {
+  box-shadow: var(--accent-color) 0px 0px 0px 3px;
+  transform: scale(1.05);
 }
 
 .newsitem_header {
