--- a/src/components/News/News.css
+++ b/src/components/News/News.css
@@ -17,6 +17,6 @@
 
 .news-container {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 20px;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  gap: 1rem 2rem;
 }
