--- a/src/components/GlobalStats/GlobalStats.css
+++ b/src/components/GlobalStats/GlobalStats.css
@@ -1,16 +1,15 @@
 .globalstats-container {
   margin-top: 4rem;
   width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  gap: 1rem 2rem;
 }
 
 .globalstats-item {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: center;  
   align-items: center;
 }
 
